--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "author": "kraisorn204@gmail.com",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "node --require ts-node/register --env-file=.env src/index.ts",
     "build": "tsc",
     "test": "mocha --require ts-node/register test/**/*.spec.ts"
   },
@@ -14,6 +14,7 @@
     "@types/chai": "^4.2.16",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.5",
+    "@types/ws": "^8.5.12",
     "chai": "^4.3.4",
     "mocha": "^10.7.3",
     "nyc": "^17.1.0",
